--- a/couchapp.json
+++ b/couchapp.json
@@ -1,4 +1,4 @@
 {
-    "name": "Name of your CouchApp",
-    "description": "CouchApp"
+    "name": "Basic CouchApp",
+    "description": "CouchApp with changes feed and form support."
 }
